Implemented jsp-logic in index.jsp and beantragen.jsp

--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -18,8 +18,8 @@ SCS_CERT_REQUEST = Sie haben Ihr Zertifikat erfolgreich beantragt.
 ERR_CERT_REQUEST = Die Beantragung Ihres Zertifikates konnte nicht durchgeführt werden.
 
 ERR_CERT_NOT_EXISTING = Sie besitzen kein Zertifikat.
-WRN_CERT_NOT_VALID = Sie besitzen ein ungültiges Zertifikat.
-WRN_CERT_EXPIRING = Ihr Zertifikat ist nur noch {0} Tage gültig.
+ERR_CERT_NOT_VALID = Sie besitzen ein ungültiges Zertifikat.
+WRN_CERT_EXPIRING = Ihr Zertifikat läuft bald aus.
 SCS_CERT_VALID = Sie besitzen ein gültiges Zertifikat.
 
 ERR_CONNECTION = Der Server antwortet nicht.
