--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -26,4 +26,8 @@ WRN_CERT_EXTENSION_IMPOSSIBLE = Sie können Ihr Zertifikat frühestens 3 Monate 
 
 WRN_EMPTY_FIELD_REASON = Bitte geben Sie den Grund für Ihren Widerruf an.
 
-ERR_CONNECTION = Der Server antwortet nicht.
+WRN_EMPTY_FIELDS_PWD_CHANGE = Zur Änderung Ihres Passworts wird Ihr aktuelles und neues Passwort benötigt
+SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
+ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
+
+ERR_CONNECTION = Der Server ist momentan nicht erreichbar.
