Added permission checks for each page adjusted redirect links for session timeout adjusted style

--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -24,9 +24,10 @@ SCS_CERT_VALID = Sie besitzen ein gültiges Zertifikat.
 
 WRN_CERT_EXTENSION_IMPOSSIBLE = Sie können Ihr Zertifikat frühestens 3 Monate vor Ablauf verlängern.
 
-WRN_EMPTY_FIELD_REASON = Bitte geben Sie den Grund für Ihren Widerruf an.
+WRN_EMPTY_FIELD_REASON = Bitte geben Sie den Grund Ihres Widerrufs an.
 
-WRN_EMPTY_FIELDS_PWD_CHANGE = Zur Änderung Ihres Passworts wird Ihr aktuelles und neues Passwort benötigt
+WRN_EMPTY_FIELDS_PWD_CHANGE = Zur Änderung Ihres Passworts wird Ihr aktuelles und neues Passwort benötigt.
+ERR_PWD_CURRENT_EQUALS_NEW = Ihr neues Passwort darf nicht Ihr aktuelles Passwort sein.
 SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
 ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
 
