--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -31,4 +31,7 @@ ERR_PWD_CURRENT_EQUALS_NEW = Ihr neues Passwort darf nicht Ihr aktuelles Passwor
 SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
 ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
 
+SCS_CERT_REVOKE = Sie haben Ihr Zertifikat erfolgreich widerrufen.
+ERR_CERT_REVOKE = Ihr Zertifikat konnte nicht widerrufen werden.
+
 ERR_CONNECTION = Der Server ist momentan nicht erreichbar.
