--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -31,6 +31,10 @@ ERR_PWD_CURRENT_EQUALS_NEW = Ihr neues Passwort darf nicht Ihr aktuelles Passwor
 SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
 ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
 
+SCS_CERT_ACTIIVATION = Ihr Zertifikat wurde erfolgreich aktiviert.
+ERR_CERT_ACTIVATION = Ihr Zertifikat konnte leider nicht aktiviert werden.
+WRN_CERT_REQUEST_WAITING = Ihr Antrag wird geprüft. Bitte haben Sie etwas Geduld...
+
 SCS_CERT_REVOKE = Sie haben Ihr Zertifikat erfolgreich widerrufen.
 ERR_CERT_REVOKE = Ihr Zertifikat konnte nicht widerrufen werden.
 
