Implemented ui password reset case in login.jsp

--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -1,6 +1,9 @@
 ERR_CREDENTIALS = Ihre E-Mail-Adresse oder Ihr Passwort ist nicht korrekt.
 WRN_EMPTY_FIELDS_LOGIN = Bitte füllen Sie beide Felder aus.
 
+SCS_PASSWORD_RESET = Ihr Passwort wurde zurückgesetzt. Bitte überprüfen Sie Ihr E-Mail-Postfach.
+ERR_PASSWORD_RESET = Es ist ein Fehler aufgetreten.
+
 ERR_INPUT_FIRSTNAME = Der eingegebene Vorname enthält ungültige Zeichen.
 ERR_INPUT_LASTNAME = Der eingegebene Nachname enthält ungültige Zeichen.
 ERR_INPUT_PERSONALID_UI = Die eingegebene Personalnummer enthält ungültige Zeichen oder besitzt die falsche Länge.
