--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -34,11 +34,12 @@ ERR_PWD_CURRENT_EQUALS_NEW = Ihr neues Passwort darf nicht Ihr aktuelles Passwor
 SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
 ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
 
+WRN_EMPTY_CERT_PWD = Bitte geben Sie ein Passwort ein.  
 SCS_CERT_ACTIIVATION = Ihr Zertifikat wurde erfolgreich aktiviert.
 ERR_CERT_ACTIVATION = Ihr Zertifikat konnte leider nicht aktiviert werden.
 WRN_CERT_REQUEST_WAITING = Ihr Antrag wird geprüft. Bitte haben Sie etwas Geduld...
 SCS_CERT_REQUEST_ACCEPTED = Ihr Antrag wurde genehmigt. Sie können Ihr Zertifikat jetzt aktivieren.
-WRN_CERT_REQUEST_DENIED = Ihr Antrag auf ein Zertifikat wurde abgelehnt. Bitte wenden Sie sich an Ihren Administrator.
+ERR_CERT_REQUEST_DENIED = Ihr Antrag auf ein Zertifikat wurde abgelehnt. Bitte wenden Sie sich an Ihren Administrator.
 
 SCS_CERT_REVOKE = Sie haben Ihr Zertifikat erfolgreich widerrufen.
 ERR_CERT_REVOKE = Ihr Zertifikat konnte nicht widerrufen werden.
