Added some ui checks and adjusted jsp logic

--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -1,8 +1,7 @@
 ERR_CREDENTIALS = Ihre E-Mail-Adresse oder Ihr Passwort ist nicht korrekt.
 WRN_EMPTY_FIELDS_LOGIN = Bitte füllen Sie beide Felder aus.
 
-SCS_PASSWORD_RESET = Ihr Passwort wurde zurückgesetzt. Bitte überprüfen Sie Ihr E-Mail-Postfach.
-ERR_PASSWORD_RESET = Es ist ein Fehler aufgetreten.
+SCS_PASSWORD_REQUEST = Ihre Anfrage wird bearbeitet...
 
 ERR_INPUT_FIRSTNAME = Der eingegebene Vorname enthält ungültige Zeichen.
 ERR_INPUT_LASTNAME = Der eingegebene Nachname enthält ungültige Zeichen.
@@ -39,7 +38,7 @@ SCS_CERT_ACTIIVATION = Ihr Zertifikat wurde erfolgreich aktiviert.
 ERR_CERT_ACTIVATION = Ihr Zertifikat konnte leider nicht aktiviert werden.
 WRN_CERT_REQUEST_WAITING = Ihr Antrag wird geprüft. Bitte haben Sie etwas Geduld...
 SCS_CERT_REQUEST_ACCEPTED = Ihr Antrag wurde genehmigt. Sie können Ihr Zertifikat jetzt aktivieren.
-ERR_CERT_REQUEST_DENIED = Ihr Antrag auf ein Zertifikat wurde abgelehnt. Bitte wenden Sie sich an Ihren Administrator.
+ERR_CERT_REQUEST_DENIED = Ihr Antrag für ein Zertifikat wurde abgelehnt. Bitte wenden Sie sich an Ihren Administrator.
 
 SCS_CERT_REVOKE = Sie haben Ihr Zertifikat erfolgreich widerrufen.
 ERR_CERT_REVOKE = Ihr Zertifikat konnte nicht widerrufen werden.
