Added second password field in extend_certificate.jsp, cleaned coding in all .jsp pages

--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -33,7 +33,7 @@ ERR_PWD_CURRENT_EQUALS_NEW = Ihr neues Passwort darf nicht Ihr aktuelles Passwor
 SCS_PWD_CHANGE = Sie haben Ihr Passwort erfolgreich geändert.
 ERR_PWD_CHANGE = Ihr Passwort konnte nicht geändert werden.
 
-WRN_EMPTY_CERT_PWD = Bitte geben Sie ein Passwort ein.  
+WRN_EMPTY_CERT_PWD = Bitte geben Sie Ihr Passwort zweimal ein.  
 SCS_CERT_ACTIIVATION = Ihr Zertifikat wurde erfolgreich aktiviert.
 ERR_CERT_ACTIVATION = Ihr Zertifikat konnte leider nicht aktiviert werden.
 WRN_CERT_REQUEST_WAITING = Ihr Antrag wird geprüft. Bitte haben Sie etwas Geduld...
