--- a/WebContent/i18n/messages_de.properties
+++ b/WebContent/i18n/messages_de.properties
@@ -24,7 +24,7 @@ ERR_CERT_NOT_VALID = Sie besitzen ein ungültiges Zertifikat.
 WRN_CERT_EXPIRING = Ihr Zertifikat läuft bald aus.
 SCS_CERT_VALID = Sie besitzen ein gültiges Zertifikat.
 
-WRN_CERT_EXTENSION_IMPOSSIBLE = Sie können Ihr Zertifikat frühestens 3 Monate vor Ablauf verlängern.
+WRN_CERT_EXTENSION_IMPOSSIBLE = Sie können Ihr Zertifikat momentan noch nicht verlängern.
 
 WRN_EMPTY_FIELD_REASON = Bitte geben Sie den Grund Ihres Widerrufs an.
 
